"connect to database Postgre"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=business
 spring.docker.compose.enabled=false
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.security.user.name=root
 spring.security.user.password=root
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/artistdb
+spring.datasource.username=artistuser
+spring.datasource.password=0000
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
